--- a/bee-message/Cargo.toml
+++ b/bee-message/Cargo.toml
@@ -11,6 +11,7 @@ keywords = [ "iota", "tangle", "bee", "framework", "message" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
+bee-byte-cost = { version = "0.1.0", path = "./bee-byte-cost", default-features = false }
 bee-pow = { version = "0.2.0", path = "../bee-pow", default-features = false }
 bee-ternary = { version = "0.5.2", default-features = false, features = [ "serde1" ] }
 
