--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,12 +3,13 @@
 # Working group   Lead                        Members
 *                 thibault@iota.org
 /.github/         thibault@iota.org           alexander.schmidt@iota.org
+/bee-autopeering/ alexander.schmidt@iota.org  thibault@iota.org 
 /bee-api/         samuel.rufinatscha@iota.org thibault@iota.org
 /bee-common/      thibault@iota.org           alexander.schmidt@iota.org
 /bee-crypto/      thibault@iota.org           alexander.schmidt@iota.org
+/bee-gossip/      alexander.schmidt@iota.org  thibault@iota.org 
 /bee-ledger/      thibault@iota.org           samuel.rufinatscha@iota.org joshua.barretto@iota.org
 /bee-message/     thibault@iota.org           bingyang.lin@iota.org thoralf.mueller@iota.org
-/bee-network/     alexander.schmidt@iota.org  joshua.barretto@iota.org
 /bee-node/        thibault@iota.org           alexander.schmidt@iota.org samuel.rufinatscha@iota.org joshua.barretto@iota.org
 /bee-peering/     alexander.schmidt@iota.org  samuel.rufinatscha@iota.org
 /bee-pow/         thibault@iota.org           alexander.schmidt@iota.org
