--- a/bee-test/Cargo.toml
+++ b/bee-test/Cargo.toml
@@ -17,6 +17,7 @@ bee-tangle = { version = "0.3.0", path = "../bee-tangle", default-features = fal
 bee-ternary = { version = "0.5.2", default-features = false, features = [ "serde1" ] }
 
 bytemuck = { version = "1.7.2", default-features = false }
+primitive-types = { version = "0.10.1", default-features = false, features = [ "serde" ] }
 rand = { version = "0.8.4", default-features = false, features = [ "min_const_gen" ] }
 
 [dev-dependencies]
