--- a/bee-message/Cargo.toml
+++ b/bee-message/Cargo.toml
@@ -16,6 +16,7 @@ bee-pow = { version = "0.2.0", path = "../bee-pow", default-features = false }
 bee-ternary = { version = "0.5.2", default-features = false, features = [ "serde1" ] }
 
 bech32 = { version = "0.8.1", default-features = false }
+bitflags = { version = "1.3.2", default-features = false }
 bytemuck = { version = "1.7.2", default-features = false }
 derive_more = { version = "0.99.16", default-features = false, features = [ "from", "as_ref", "deref" ] }
 digest = { version = "0.9.0", default-features = false }
