--- a/bee-storage/bee-storage/Cargo.toml
+++ b/bee-storage/bee-storage/Cargo.toml
@@ -12,6 +12,7 @@ homepage = "https://www.iota.org"
 
 [dependencies]
 bee-common = { version = "0.5.0", path = "../../bee-common/bee-common", default-features = false }
+bee-packable = { git = "https://github.com/iotaledger/bee", branch = "coordicide", default-features = false, features = ["serde"] }
 
 serde = { version = "1.0.130", features = [ "derive" ], default-features = false }
 thiserror = { version = "1.0.30", default-features = false }
