Change `no_std` crates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,8 +98,7 @@ jobs:
       matrix:
         rust: [nightly, beta, stable]
         crates: [
-          "bee-common/bee-ord",
-          "bee-common/bee-packable",
+          "bee-ternary",
         ]
 
     steps:
