--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,8 +5,8 @@
 /.github/         thibault@iota.org           alexander.schmidt@iota.org
 /bee-api/         samuel.rufinatscha@iota.org yuwei.wu@iota.org thibault@iota.org
 /bee-common/      thibault@iota.org           alexander.schmidt@iota.org
+/bee-gossip/      alexander.schmidt@iota.org  joshua.barretto@iota.org
 /bee-ledger/      thibault@iota.org           samuel.rufinatscha@iota.org joshua.barretto@iota.org
-/bee-network/     alexander.schmidt@iota.org  joshua.barretto@iota.org
 /bee-node/        thibault@iota.org           alexander.schmidt@iota.org
 /bee-peering/     samuel.rufinatscha@iota.org thibault@iota.org alexander.schmidt@iota.org
 /bee-protocol/    thibault@iota.org           samuel.rufinatscha@iota.org joshua.barretto@iota.org
