--- a/bee-api/bee-rest-api/Cargo.toml
+++ b/bee-api/bee-rest-api/Cargo.toml
@@ -12,9 +12,9 @@ homepage = "https://www.iota.org"
 
 [dependencies]
 bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, optional = true }
+bee-gossip = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, optional = true }
 bee-ledger = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
 bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
-bee-network = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, optional = true }
 bee-pow = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
 bee-protocol = { path = "../../bee-protocol", default-features = false }
 bee-runtime = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, optional = true  }
@@ -39,7 +39,7 @@ warp = { version = "0.3.1", default-features = false, optional = true }
 [features]
 endpoints = [
   "bee-common",
-  "bee-network",
+  "bee-gossip",
   "bee-protocol/workers",
   "bee-runtime",
   "bee-storage",
