--- a/bee-node/config.chrysalis-devnet.toml
+++ b/bee-node/config.chrysalis-devnet.toml
@@ -22,11 +22,20 @@ target_exclusions = []
 bind_address            = "/ip4/0.0.0.0/tcp/15600"
 reconnect_interval_secs = 30
 max_unknown_peers       = 4
+max_discovered_peers    = 4
 
 [network.peering]
 #[[network.peering.peers]]
 #address  = ""
 #alias    = ""
+
+[autopeering]
+enabled = false
+bind_address = "0.0.0.0:14626"
+entry_nodes = []
+entry_nodes_prefer_ipv6 = false
+run_as_entry_node = false
+drop_neighbors_on_salt_update = false
 
 [protocol]
 minimum_pow_score = 2000
