--- a/bee-protocol/Cargo.toml
+++ b/bee-protocol/Cargo.toml
@@ -11,10 +11,11 @@ keywords = [ "iota", "tangle", "bee", "framework", "protocol" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
+bee-autopeering = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
 bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, optional = true }
+bee-gossip = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
 bee-ledger = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, features = [ "workers" ], optional = true }
 bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, features = [ "serde" ] }
-bee-network = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
 bee-pow = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
 bee-runtime = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, optional = true }
 bee-storage = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, optional = true }
@@ -43,8 +44,8 @@ twox-hash = { version = "1.6.1", default-features = false, optional = true }
 [features]
 workers = [
   "bee-common",
+  "bee-gossip/full",
   "bee-ledger",
-  "bee-network/full",
   "bee-runtime",
   "bee-storage",
   "bee-tangle",
