--- a/bee-node/config.chrysalis-devnet.toml
+++ b/bee-node/config.chrysalis-devnet.toml
@@ -1,6 +1,6 @@
 # Duplicate this file to config.toml to use it
 
-identity   = ""
+# identity   = ""
 alias      = "bee"
 bech32_hrp = "atoi"
 network_id = "chrysalis-devnet"
