--- a/bee-node/Cargo.toml
+++ b/bee-node/Cargo.toml
@@ -11,19 +11,19 @@ keywords = [ "iota", "tangle", "bee", "framework", "node" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
-bee-autopeering = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
-bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, features = [ "auth" ] }
-bee-gossip = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, features = [ "full" ] }
-bee-ledger = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, features = [ "workers" ] }
-bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
+bee-autopeering = { git = "https://github.com/alex6323/bee.git", branch = "autopeering-fixes" }
+bee-common = { git = "https://github.com/alex6323/bee.git", branch = "autopeering-fixes", default-features = false, features = [ "auth" ] }
+bee-gossip = { git = "https://github.com/alex6323/bee.git", branch = "autopeering-fixes", default-features = false, features = [ "full" ] }
+bee-ledger = { git = "https://github.com/alex6323/bee.git", branch = "autopeering-fixes", default-features = false, features = [ "workers" ] }
+bee-message = { git = "https://github.com/alex6323/bee.git", branch = "autopeering-fixes", default-features = false }
 bee-protocol = { path = "../bee-protocol", default-features = false, features = [ "workers" ] }
 bee-rest-api = { path = "../bee-api/bee-rest-api", default-features = false, features = [ "endpoints" ] }
-bee-runtime = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
-bee-storage = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
-bee-storage-null = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
-bee-storage-rocksdb = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, optional = true }
-bee-storage-sled = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, optional = true }
-bee-tangle = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
+bee-runtime = { git = "https://github.com/alex6323/bee.git", branch = "autopeering-fixes", default-features = false }
+bee-storage = { git = "https://github.com/alex6323/bee.git", branch = "autopeering-fixes", default-features = false }
+bee-storage-null = { git = "https://github.com/alex6323/bee.git", branch = "autopeering-fixes", default-features = false }
+bee-storage-rocksdb = { git = "https://github.com/alex6323/bee.git", branch = "autopeering-fixes", default-features = false, optional = true }
+bee-storage-sled = { git = "https://github.com/alex6323/bee.git", branch = "autopeering-fixes", default-features = false, optional = true }
+bee-tangle = { git = "https://github.com/alex6323/bee.git", branch = "autopeering-fixes", default-features = false }
 
 anymap = { version = "0.12.1", default-features = false }
 async-trait = { version = "0.1.51", default-features = false }
