--- a/bee-node/config.chrysalis-mainnet.toml
+++ b/bee-node/config.chrysalis-mainnet.toml
@@ -7,6 +7,7 @@ network_id = "chrysalis-mainnet"
 
 [logger]
 [[logger.outputs]]
+color_enabled     = true
 name              = "stdout"
 level_filter      = "info"
 target_filters    = []
