Change configs to work with new color_enable settings (#935)
* Change configs to work with new color_enable settings

* Update dev dep (+ OCD)

Co-authored-by: Thibault Martinez <thibault@iota.org>

--- a/bee-node/config.chrysalis-comnet.toml
+++ b/bee-node/config.chrysalis-comnet.toml
@@ -11,6 +11,7 @@ name              = "stdout"
 level_filter      = "info"
 target_filters    = []
 target_exclusions = []
+color_enabled     = true
 [[logger.outputs]]
 name              = "warn.log"
 level_filter      = "warn"
