--- a/bee-node/config.chrysalis-devnet.toml
+++ b/bee-node/config.chrysalis-devnet.toml
@@ -11,6 +11,7 @@ name              = "stdout"
 level_filter      = "info"
 target_filters    = []
 target_exclusions = []
+color_enabled     = true
 [[logger.outputs]]
 name              = "warn.log"
 level_filter      = "warn"
