--- a/bee-message/fuzz/Cargo.toml
+++ b/bee-message/fuzz/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 cargo-fuzz = true
 
 [dependencies]
-bee-common = { version = "0.5.0", path = "../../bee-common/bee-common", default-features = false }
+bee-packable = { git = "https://github.com/iotaledger/bee", branch = "coordicide", default-features = false }
 bee-message = { path = "..", default-features = false }
 
 libfuzzer-sys = { version = "0.4.2", default-features = false }
