add `bee-message` to the `no_std` workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,7 @@ jobs:
         rust: [nightly, beta, stable]
         crates: [
           "bee-ternary",
+          "bee-message",
         ]
 
     steps:
@@ -329,5 +330,5 @@ jobs:
 
       - name: Run missing files check
         run: >
-          bash .github/workflows/scripts/missing_files.sh 
+          bash .github/workflows/scripts/missing_files.sh
           bee-message/fuzz
