--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,4 @@
-# We can get rid of this once Rust 1.58 lands
-cargo-features = ["strip"]
+# cargo-features = [ "strip" ]
 
 [workspace]
 members = [
@@ -19,4 +18,4 @@ codegen-units = 1
 inherits = "release"
 lto = true
 panic = "abort"
-strip = "symbols"
+# strip = "symbols"
