--- a/bee-ledger/Cargo.toml
+++ b/bee-ledger/Cargo.toml
@@ -31,6 +31,7 @@ hex = { version = "0.4.3", default-features = false, optional = true }
 iota-crypto = { version = "0.9.1", default-features = false, features = [ "blake2b" ], optional = true }
 log = { version = "0.4.14", default-features = false, optional = true }
 packable = { version = "0.2.1", default-features = false, features = [ "serde", "io" ] }
+primitive-types = { version = "0.10.1", default-features = false, features = [ "serde_no_std" ], optional = true }
 ref-cast = { version = "1.0.6", default-features = false, optional = true }
 reqwest = { version = "0.11.5", default-features = false, features = [ "default-tls", "stream" ], optional = true }
 serde = { version = "1.0.130", default-features = false, features = [ "derive" ], optional = true }
