--- a/bee-message/Cargo.toml
+++ b/bee-message/Cargo.toml
@@ -21,6 +21,7 @@ digest = { version = "0.9.0", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 iota-crypto = { version = "0.9.1", default-features = false, features = [ "ed25519", "blake2b" ] }
 serde = { version = "1.0.130", default-features = false, optional = true }
+stable-sorted = { version = "0.1.0", git = "https://github.com/iotaledger/common-rs", branch = "main", default-features = false }
 thiserror = { version = "1.0.30", default-features = false }
 
 [dev-dependencies]
