--- a/bee-ledger/Cargo.toml
+++ b/bee-ledger/Cargo.toml
@@ -29,6 +29,7 @@ ref-cast = { version = "1.0.6", default-features = false, optional = true }
 reqwest = { version = "0.11.5", default-features = false, features = [ "default-tls", "stream" ], optional = true }
 serde = { version = "1.0.130", default-features = false, features = [ "derive" ], optional = true }
 thiserror = { version = "1.0.30", default-features = false }
+time-helper = { version = "0.1.0", default-features = false }
 tokio = { version = "1.12.0", default-features = false, features = [ "sync", "fs" ], optional = true }
 tokio-stream = { version = "0.1.7", default-features = false, optional = true }
 url = { version = "2.2.2", default-features = false, optional = true }
