--- a/bee-node/Cargo.toml
+++ b/bee-node/Cargo.toml
@@ -12,7 +12,7 @@ homepage = "https://www.iota.org"
 
 [dependencies]
 bee-autopeering = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
-bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, features = [ "auth" ] }
+bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
 bee-gossip = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, features = [ "full" ] }
 bee-ledger = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, features = [ "workers" ] }
 bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
@@ -27,8 +27,10 @@ bee-tangle = { git = "https://github.com/iotaledger/bee.git", branch = "dev", de
 
 anymap = { version = "0.12.1", default-features = false }
 async-trait = { version = "0.1.51", default-features = false }
+auth-helper = { version = "0.1.0", default-features = false }
 cap = { version = "0.1.0", default-features = false, optional = true }
 chrono = { version = "0.4.19", default-features = false }
+fern-logger = { version = "0.1.0", default-features = false }
 futures = { version = "0.3.17", default-features = false }
 fxhash = { version = "0.2.1", default-features = false }
 hex = { version = "0.4.3", default-features = false }
