Add new tangle folder to the storage configs

--- a/bee-node/config.chrysalis-comnet.toml
+++ b/bee-node/config.chrysalis-comnet.toml
@@ -101,7 +101,7 @@ delay           = 60480
 prune_receipts  = false
 
 [storage]
-path = "./storage/comnet"
+path = "./storage/comnet/tangle"
 
 [tangle]
 below_max_depth = 15
