--- a/bee-node/config.chrysalis-devnet.toml
+++ b/bee-node/config.chrysalis-devnet.toml
@@ -99,7 +99,7 @@ delay           = 60480
 prune_receipts  = false
 
 [storage]
-path = "./storage/mainnet"
+path = "./storage/devnet/tangle"
 
 [tangle]
 below_max_depth = 15
