Add bee-identity and temporary bee-gossip2 crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ members = [
 	"bee-common/bee-common",
 	"bee-common/bee-common-derive",
 	"bee-crypto",
+    "bee-identity",
 	"bee-ledger",
 	"bee-message",
 	"bee-network/bee-autopeering",
 	"bee-network/bee-gossip",
+	"bee-network/bee-gossip2",
 	"bee-pow",
 	"bee-protocol",
 	"bee-runtime",
