--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@
 [workspace]
 members = [
 	"bee-api/bee-rest-api",
+	"bee-indexer",
 	"bee-ledger",
 	"bee-message",
 	"bee-network/bee-autopeering",
