--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
         if: steps.cache-rocksdb.outputs.cache-hit != 'true'
         run: |
           echo $ROCKSDB_VERSION
-          curl -o rocksdb.tar.gz "https://github.com/facebook/rocksdb/archive/refs/tags/v$ROCKSDB_VERSION.tar.gz"
+          curl -v -o rocksdb.tar.gz "https://github.com/facebook/rocksdb/archive/refs/tags/v$ROCKSDB_VERSION.tar.gz"
           tar -xzf rocksdb.tar.gz
           cd rocksdb
           apt install libgflags-dev libsnappy-dev zlib1g-dev libbz2-dev liblz4-dev libzstd-dev
