--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,12 +46,15 @@ jobs:
         if: matrix.os == 'windows-latest'
 
       - name: Set rocksdb version
+        if: matrix.os == 'ubuntu-latest'
         run: echo "ROCKSDB_VERSION=6.22.1" >> $GITHUB_ENV
 
       - name: Set local binaries path
+        if: matrix.os == 'ubuntu-latest'
         run: echo "LOCAL_BINARIES_PATH=$(pwd)/local-binaries" >> $GITHUB_ENV
 
       - name: Cache rocksdb
+        if: matrix.os == 'ubuntu-latest'
         uses: actions/cache@v2
         id: cache-rocksdb
         with:
