--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,17 +45,19 @@ jobs:
         run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
         if: matrix.os == 'windows-latest'
 
-      - name: Set rocksdb version
+      - name: Set rocksdb version (Unix)
         if: matrix.os != 'windows-latest'
         run: echo "ROCKSDB_VERSION=6.22.1" >> $GITHUB_ENV
 
+      - name: Set rocksdb version (Windows)
+        if: matrix.os == 'windows-latest'
+        run: echo "ROCKSDB_VERSION=6.22.1.20635" >> $GITHUB_ENV
+
       - name: Set local binaries path
-        if: matrix.os != 'windows-latest'
         run: echo "LOCAL_BINARIES_PATH=$(pwd)/local-binaries" >> $GITHUB_ENV
 
       - name: Cache rocksdb
         uses: actions/cache@v2
-        if: matrix.os != 'windows-latest'
         id: cache-rocksdb
         with:
           path: ${{ env.LOCAL_BINARIES_PATH }}
@@ -81,6 +83,11 @@ jobs:
           make shared_lib
           cp -L librocksdb.dylib $LOCAL_BINARIES_PATH
           echo "ROCKSDB_LIB_DIR=$LOCAL_BINARIES_PATH/librocksdb.dylib" >> $GITHUB_ENV
+
+      - name: Install rocksdb (Windows)
+        if: steps.cache-rocksdb.outputs.cache-hit != 'true' && matrix.os == 'windows-latest'
+        run: |
+          nuget install RocksDB -Version $ROCKSDB_VERSION
 
       - name: Install ${{ matrix.rust }}
         uses: actions-rs/toolchain@v1
