--- a/bee-indexer/Cargo.toml
+++ b/bee-indexer/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bee-ledger = { version = "0.7.0", path = "../bee-ledger", default-features = false, features = [ "workers" ] }
+bee-message = { version = "0.2.0", path = "../bee-message", default-features = false }
+
 dotenv = { version = "0.15.0" }
 hex = { version = "0.4.3", default-features = false }
 sqlx = { version = "0.5", default-features = false, features = [ "macros", "migrate", "offline", "runtime-tokio-rustls", "sqlite" ] }
-tokio = { version = "1", default-features = false, features = ["full"] }
+tokio = { version = "1", default-features = false, features = [ "full" ] }
 
 [dev-dependencies]
 bee-test = { path = "../bee-test", default-features = false }
